# airflow-dags

./: .envrc  .gitignore  main.py  pyproject.toml
dags/: bi_purchase_order.py  oracle_to_mariadb.py  test_smtp.py  tutorial.py
example_dags/: tutorial.py
k8s/: oracle-to-mariadb-config.yaml  oracle-to-mariadb-query.yaml  oracle-to-mariadb-sealed-secret.yaml
